# glfwProject

./: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h
include/GLAD/src/: glad.c
resources/shaders/: cubeFrag.frag  cubeVert.vert  fragment.frag  lightingFrag.frag  lightingVert.vert  vertex.vert
shaders/: fragmentshader.frag
src/: CMakeProject1.cpp  CMakeProject1.h  camera.h  fragmentshader.frag  shaders.h  vertexshader.vert
